change way to reduce brightness in plans completely, because transform + safari fix for simultaeous brightness filter + loopholes overlay resulted in problems (loopholes was invisible in higher zoom levels). now, new image is calculated at upload. problem here is that there can be trouble with color spaces of the image.

--- a/app/assets/stylesheets/elements/projects-show.scss
+++ b/app/assets/stylesheets/elements/projects-show.scss
@@ -109,9 +109,15 @@ body[data-section="project"] {
       }
     }
 
+    &:not(.loaded) {
+      .slide__loopholes {
+        display:none;
+      }
+    }
+
     &.plan .slide__image img {
-      transform: translateZ(0) scale(1.0, 1.0); // just a strange hack to make safari not blurry
-      filter: brightness(95%);
+      // transform: translateZ(0) scale(1.0, 1.0); // just a strange hack to make safari not blurry
+      // filter: brightness(95%);
     }
 
     @include bp($b_8_and_up) {
